INTYGFV-15954: Value converter for Diagnoses (#254)